--- a/ICPP-19/communications.bib
+++ b/ICPP-19/communications.bib
@@ -1,9 +1,9 @@
 
-@Misc{webpagescheduling,
+@online{webpagescheduling,
   author =       "Peter Brucker and Sigrid Knust",
   howpublished = "Web document, URL:
                  \url{http://www2.informatik.uni-osnabrueck.de/knust/class/}",
-  note =         "",
+  note =         "Accessed: 2019-04-15",
   title =        "Complexity results for scheduling problems",
 }
 
@@ -393,13 +393,13 @@ url = "http://www.sciencedirect.com/science/article/pii/S0010465510001438",
  address = {Institute for Operations Research and the Management Sciences (INFORMS), Linthicum, Maryland, USA},
  keywords = {NP-complete, computational complexity, jobshop scheduling},
 } 
-@article{waitingForExactBib,
+@article{extendedVersion,
     author    = {Suraj Kumar and
         Lionel Eyraud-Dubois and
             Sriram Krishnamoorthy},
     title     = {Performance Models for Data Transfers: A Case Study with Molecular Chemistry Kernels},
     journal   = {CoRR},
-    volume    = {abs/},
+    volume    = {abs/1904.06825},
     year      = {2019},
-    url       = {https://arxiv.org/submit/2653435},
+    url       = {http://arxiv.org/abs/1904.06825},
 }
